REST requests metadata processing changed.
